Fix env title overflow bug.

--- a/step-release-vis/src/app/components/environment/environment.css
+++ b/step-release-vis/src/app/components/environment/environment.css
@@ -13,9 +13,6 @@
   font-family: "Courier New", sans-serif;
   display: inline-block;
   vertical-align: top;
-
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .expand-icon {
